--- a/index.html
+++ b/index.html
@@ -1,261 +1,251 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8">
-  <title>鹿港打卡追蹤 - for_chou_project</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 12px; box-sizing: border-box; background:#f7f7f7; }
-    h1 { font-size: 18px; margin: 0 0 8px 0; }
-    .ctrl { margin: 8px 0 12px 0; display:flex; gap:8px; align-items:center; }
-    button { padding:8px 12px; border: none; background:#1a73e8; color:#fff; border-radius:6px; cursor:pointer; }
-    button:disabled { opacity:0.5; cursor:not-allowed; }
-    .status { font-weight:600; color:#333; margin-left:8px; }
-    #map { width: 100%; height: 72vh; border-radius:8px; overflow:hidden; box-shadow:0 2px 6px rgba(0,0,0,0.12); }
-    .footer { margin-top:10px; font-size:13px; color:#555; }
-  </style>
-</head>
-<body>
-  <h1>鹿港打卡挑戰（for_chou_project）</h1>
-  <div id="app">
-    <div class="ctrl">
-      <button id="btnStart" @click="startTracking">開始定位追蹤</button>
-      <button id="btnStop" @click="stopTracking" disabled>停止定位追蹤</button>
-      <div class="status" id="status">狀態：等待操作</div>
-    </div>
-    <div id="map"></div>
-    <div class="footer">部署至 GitHub Pages 後，請用 HTTPS 打開頁面以允許定位。</div>
-  </div>
-
-  <!-- Vue 2 -->
+  <meta charset="UTF-8" />
+  <title>鹿港景點導覽地圖</title>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-  <!-- Google Maps JS (uses your API key) -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9yd5GeV-J0SHVtpkeHvtFfSryaavAKIE&libraries=geometry"></script>
 
-  <script>
-  // Wrap in an IIFE to avoid leaking globals
-  (function(){
-    const app = new Vue({
-      el:'#app',
-      data: {
-        map: null,
-        watchId: null,
-        userMarker: null,
-        accuracyCircle: null,
-        lastStatus: '等待開始追蹤...',
-        arrivalThreshold: 60,
-        spotMarkers: new Map(),
-        _hasZoomedToUser: false,
-        // spots: updated list you provided (12 entries)
-        spots: [
-          { id: 'glass1', name: '玻璃館', lat: 24.068667, lng: 120.395437 },
-          { id: 'oldstreet', name: '鹿港老街', lat: 24.056348, lng: 120.432589 },
-          { id: 'longshan', name: '鹿港龍山寺', lat: 24.0504, lng: 120.4349 },
-          { id: 'matsu', name: '鹿港天后宮', lat: 24.059338, lng: 120.431380 },
-          { id: 'glassmazu', name: '玻璃媽祖廟', lat: 24.069118, lng: 120.394715 },
-          { id: 'guihua', name: '桂花巷藝術村', lat: 24.055848, lng: 120.431928 },
-          { id: 'taiwanglass', name: '臺灣玻璃館', lat: 24.068970, lng: 120.394912 },
-          { id: 'folk', name: '鹿港民俗文物館', lat: 24.054200, lng: 120.436306 },
-          { id: 'jiuqu', name: '九曲巷', lat: 24.0535, lng: 120.4350 },
-          { id: 'shiyi', name: '十宜樓', lat: 24.0535, lng: 120.4353 },
-          { id: 'yilou', name: '鹿港意樓', lat: 24.0529, lng: 120.4353 },
-          { id: 'moruxiang', name: '摸乳巷', lat: 24.051817, lng: 120.432231 }
-        ],
-        lukangCenter: { lat: 24.0565, lng: 120.4351 }
-      },
-      methods: {
-        initMap() {
-          const lukang = this.lukangCenter;
-          const taiwanCenter = { lat: 23.7, lng: 121 };
+  <style>
+    body { margin: 0; font-family: sans-serif; }
+    #map { width: 100%; height: 540px; }
+    .ctrl { padding: 10px; }
+    button { margin-right: 10px; }
+  </style>
+</head>
 
-          this.map = new google.maps.Map(document.getElementById('map'), {
-            center: lukang,
-            zoom: 14,
-            mapTypeId: 'roadmap',
-            styles: [{ featureType: "poi", elementType: "labels", stylers: [{ visibility: "off" }] }]
-          });
+<body>
+<div id="app">
+  <div class="ctrl">
+    <button @click="startTracking">開始定位追蹤</button>
+    <button @click="stopTracking" :disabled="!watchId">停止定位追蹤</button>
+    <span v-if="lastStatus">｜ {{ lastStatus }}</span>
+  </div>
+  <div id="map"></div>
+</div>
 
-          // ensure map renders nicely in some embed contexts
-          setTimeout(() => {
-            google.maps.event.trigger(this.map, 'resize');
-            this.map.setCenter(lukang);
-          }, 120);
+<script>
+const googleMap = new Vue({
+  el: "#app",
+  data: {
+    map: null,
+    watchId: null,
+    userMarker: null,
+    accuracyCircle: null,
+    lastStatus: "",
+    arrivalThreshold: 5, // 5 公尺範圍即視為抵達景點
+    insideStartTime: null,
+    totalStaySeconds: 0,
+    lukangPolygon: null,
 
-          // create mask: taiwan dark + lukang bright hole using Polygon with hole
-          const createCirclePath = (center, radius, points=128) => {
-            const res = [];
-            const R = 6378137;
-            const lat = center.lat * Math.PI/180;
-            const lng = center.lng * Math.PI/180;
-            const d = radius / R;
-            for (let i=0;i<=points;i++){
-              const b = i*2*Math.PI/points;
-              const latP = Math.asin(Math.sin(lat)*Math.cos(d) + Math.cos(lat)*Math.sin(d)*Math.cos(b));
-              const lngP = lng + Math.atan2(Math.sin(b)*Math.sin(d)*Math.cos(lat), Math.cos(d)-Math.sin(lat)*Math.sin(latP));
-              res.push({ lat: latP*180/Math.PI, lng: lngP*180/Math.PI });
-            }
-            return res;
-          };
+    // 🏁 景點資料（11 個）
+    spots: [
+      { id: "glass", name: "玻璃館", lat: 24.068667, lng: 120.395437 },
+      { id: "oldstreet", name: "鹿港老街", lat: 24.056348, lng: 120.432589 },
+      { id: "longshan", name: "鹿港龍山寺", lat: 24.0504, lng: 120.4349 },
+      { id: "matsu", name: "鹿港天后宮", lat: 24.059338, lng: 120.431380 },
+      { id: "glassmatsu", name: "玻璃媽祖廟", lat: 24.069118, lng: 120.394715 },
+      { id: "osmanthus", name: "桂花巷藝術村", lat: 24.055848, lng: 120.431928 },
+      { id: "twglass", name: "臺灣玻璃館", lat: 24.068970, lng: 120.394912 },
+      { id: "museum", name: "鹿港名民俗文物館", lat: 24.054200, lng: 120.436306 },
+      { id: "jiuqu", name: "九曲巷", lat: 24.0535, lng: 120.4350 },
+      { id: "shiyi", name: "十宜樓", lat: 24.0535, lng: 120.4353 },
+      { id: "moru", name: "摸乳巷", lat: 24.051817, lng: 120.432231 }
+    ],
 
-          const taiwanCircle = createCirclePath(taiwanCenter, 350000);
-          const lukangHole = createCirclePath(lukang, 6000).reverse();
+    spotMarkers: new Map()
+  },
 
-          new google.maps.Polygon({
-            paths: [taiwanCircle, lukangHole],
-            strokeColor: 'transparent',
-            strokeOpacity: 0,
-            fillColor: 'black',
-            fillOpacity: 0.5,
-            clickable: false,
-            map: this.map
-          });
+  methods: {
+    initMap() {
+      const lukang = { lat: 24.0565, lng: 120.4351 };
+      const taiwanCenter = { lat: 23.7, lng: 121 };
 
-          // fit to lukang hole for nice initial view
-          const bounds = new google.maps.LatLngBounds();
-          lukangHole.forEach(p => bounds.extend(p));
-          this.map.fitBounds(bounds, 80);
-          this.map.setOptions({ maxZoom: 17 });
+      // 地圖初始化
+      this.map = new google.maps.Map(document.getElementById("map"), {
+        center: lukang,
+        zoom: 7,
+        mapTypeId: "roadmap",
+      });
 
-          // render spots
-          this.renderSpots();
+      // 工具：產生圓形 Polygon 點
+      const createCirclePath = (center, radius, points = 128) => {
+        const arr = [];
+        const R = 6378137;
+        const lat = center.lat * Math.PI/180;
+        const lng = center.lng * Math.PI/180;
+        const d = radius / R;
 
-          // user marker (small red dot)
-          this.userMarker = new google.maps.Marker({
-            map: this.map,
-            title: '我的位置',
-            icon: {
-              path: google.maps.SymbolPath.CIRCLE,
-              scale: 5,
-              fillColor: '#FF3B30',
-              fillOpacity: 1,
-              strokeColor: '#ffffff',
-              strokeWeight: 2
-            },
-            visible: false
-          });
-
-          this.accuracyCircle = new google.maps.Circle({
-            map: this.map,
-            strokeColor: 'transparent',
-            fillColor: '#1a73e8',
-            fillOpacity: 0.12,
-            visible: false
-          });
-
-          // wire up buttons (for non-Vue click handlers fallback)
-          const btnStart = document.getElementById('btnStart');
-          const btnStop = document.getElementById('btnStop');
-          btnStart.addEventListener('click', () => this.startTracking());
-          btnStop.addEventListener('click', () => this.stopTracking());
-          this.updateStatus(this.lastStatus);
-
-          // If user declined earlier or browser blocks geolocation in iframe, try a prompt when map loads:
-          // We do NOT auto-request here; startTracking button will request permission.
-        },
-
-        renderSpots() {
-          this.spots.forEach(s => {
-            const m = new google.maps.Marker({
-              position: { lat: s.lat, lng: s.lng },
-              map: this.map,
-              title: s.name
-            });
-            this.spotMarkers.set(s.name, m);
-          });
-        },
-
-        updateStatus(text){
-          this.lastStatus = text;
-          const el = document.getElementById('status');
-          if(el) el.textContent = '狀態：' + text;
-          // enable/disable buttons
-          document.getElementById('btnStop').disabled = !this.watchId;
-          document.getElementById('btnStart').disabled = !!this.watchId;
-        },
-
-        startTracking(){
-          if (!('geolocation' in navigator)) {
-            this.updateStatus('此瀏覽器不支援定位');
-            return;
-          }
-          if (this.watchId) return;
-
-          this.updateStatus('正在請求定位權限...');
-          // use watchPosition for continuous tracking
-          this.watchId = navigator.geolocation.watchPosition(
-            pos => {
-              const { latitude, longitude, accuracy } = pos.coords;
-              const latLng = new google.maps.LatLng(latitude, longitude);
-
-              // update markers
-              this.userMarker.setPosition(latLng);
-              this.userMarker.setVisible(true);
-              this.accuracyCircle.setCenter(latLng);
-              this.accuracyCircle.setRadius(accuracy || 50);
-              this.accuracyCircle.setVisible(true);
-
-              if (!this._hasZoomedToUser) {
-                this._hasZoomedToUser = true;
-                this.map.setCenter(latLng);
-                this.map.setZoom(17);
-              }
-
-              // check arrivals
-              this.checkArrivals(latLng);
-              this.updateStatus(`定位成功（±${Math.round(accuracy)}m）`);
-            },
-            err => {
-              // user denied or error
-              this.updateStatus('定位失敗或被拒絕：' + (err.message||err.code));
-              // set map back to lukang
-              this.map.setCenter(this.lukangCenter);
-              this.map.setZoom(14);
-              // clear watch if error code PERMISSION_DENIED
-              if (err.code === 1 && this.watchId) {
-                navigator.geolocation.clearWatch(this.watchId);
-                this.watchId = null;
-                this.updateStatus('定位權限被拒絕');
-              }
-            },
-            { enableHighAccuracy: true, maximumAge: 5000, timeout: 15000 }
+        for (let i = 0; i <= points; i++) {
+          const a = (i * 2 * Math.PI) / points;
+          const latP = Math.asin(Math.sin(lat) * Math.cos(d) + Math.cos(lat) * Math.sin(d) * Math.cos(a));
+          const lngP = lng + Math.atan2(
+            Math.sin(a) * Math.sin(d) * Math.cos(lat),
+            Math.cos(d) - Math.sin(lat) * Math.sin(latP)
           );
-          this.updateStatus('正在追蹤定位中...');
-        },
+          arr.push({ lat: latP * 180 / Math.PI, lng: lngP * 180 / Math.PI });
+        }
+        return arr;
+      };
 
-        stopTracking(){
-          if (this.watchId) {
-            navigator.geolocation.clearWatch(this.watchId);
-            this.watchId = null;
-            this.userMarker.setVisible(false);
-            this.accuracyCircle.setVisible(false);
-            this.updateStatus('已停止追蹤');
+      // 遮罩：台灣暗、鹿港亮洞口
+      const taiwanCircle = createCirclePath(taiwanCenter, 350000);
+      const lukangHole = createCirclePath(lukang, 6000).reverse();
+
+      this.lukangPolygon = new google.maps.Polygon({
+        paths: [taiwanCircle, lukangHole],
+        strokeColor: "transparent",
+        strokeOpacity: 0,
+        fillColor: "black",
+        fillOpacity: 0.5,
+        clickable: false,
+        map: this.map
+      });
+
+      // 適當縮放
+      const bounds = new google.maps.LatLngBounds();
+      lukangHole.forEach(p => bounds.extend(p));
+      this.map.fitBounds(bounds, 80);
+      this.map.setOptions({ maxZoom: 17 });
+
+      // 放景點
+      this.renderSpots();
+
+      // 使用者標記（起始隱藏）
+      this.userMarker = new google.maps.Marker({
+        map: this.map,
+        visible: false,
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          scale: 7,
+          fillColor: "red",
+          fillOpacity: 1,
+          strokeColor: "white",
+          strokeWeight: 2
+        }
+      });
+
+      this.accuracyCircle = new google.maps.Circle({
+        map: this.map,
+        fillColor: "#4285F4",
+        fillOpacity: 0.15,
+        strokeOpacity: 0,
+        visible: false
+      });
+    },
+
+    renderSpots() {
+      this.spots.forEach(s => {
+        const m = new google.maps.Marker({
+          position: { lat: s.lat, lng: s.lng },
+          map: this.map,
+          title: s.name
+        });
+        this.spotMarkers.set(s.id, m);
+      });
+    },
+
+    startTracking() {
+      if (!navigator.geolocation) {
+        this.lastStatus = "瀏覽器不支援定位";
+        return;
+      }
+
+      this.watchId = navigator.geolocation.watchPosition(
+        pos => {
+          const { latitude, longitude, accuracy } = pos.coords;
+          const point = new google.maps.LatLng(latitude, longitude);
+
+          // 顯示使用者位置與精度
+          this.userMarker.setPosition(point);
+          this.userMarker.setVisible(true);
+          this.accuracyCircle.setCenter(point);
+          this.accuracyCircle.setRadius(accuracy || 50);
+          this.accuracyCircle.setVisible(true);
+
+          // 進入鹿港圈 → 計時開始
+          const inside = google.maps.geometry.poly.containsLocation(
+            point,
+            this.lukangPolygon
+          );
+
+          if (inside && !this.insideStartTime) {
+            this.insideStartTime = Date.now();
           }
+
+          if (!inside && this.insideStartTime) {
+            this.totalStaySeconds += (Date.now() - this.insideStartTime) / 1000;
+            this.insideStartTime = null;
+          }
+
+          // 自動縮放到使用者 100m
+          this.map.setCenter(point);
+          this.map.setZoom(18);
+
+          // 檢查景點
+          this.checkArrivals(point);
+
+          this.lastStatus = `定位成功（±${Math.round(accuracy)}m）`;
         },
 
-        checkArrivals(userLatLng){
-          for (const [key, marker] of this.spotMarkers.entries()){
-            const dist = google.maps.geometry.spherical.computeDistanceBetween(userLatLng, marker.getPosition());
-            if (dist <= this.arrivalThreshold) {
-              // mark removal + simple status
-              marker.setMap(null);
-              this.spotMarkers.delete(key);
-              this.updateStatus(`到達 ${marker.getTitle()} 並移除`);
+        err => {
+          this.lastStatus = "未開啟定位 → 顯示鹿港";
+          this.map.setCenter({ lat: 24.0565, lng: 120.4351 });
+          this.map.setZoom(15);
+        },
+
+        { enableHighAccuracy: true, timeout: 15000 }
+      );
+    },
+
+    stopTracking() {
+      if (this.watchId) {
+        navigator.geolocation.clearWatch(this.watchId);
+        this.watchId = null;
+        this.lastStatus = "已停止追蹤";
+      }
+    },
+
+    checkArrivals(userLoc) {
+      for (const [id, marker] of this.spotMarkers.entries()) {
+        const dist = google.maps.geometry.spherical.computeDistanceBetween(
+          userLoc,
+          marker.getPosition()
+        );
+
+        if (dist <= this.arrivalThreshold) {
+          marker.setMap(null);
+          this.spotMarkers.delete(id);
+
+          this.lastStatus = `到達「${marker.getTitle()}」`;
+
+          // 全部景點完成 → 停止總計時
+          if (this.spotMarkers.size === 0) {
+            if (this.insideStartTime) {
+              this.totalStaySeconds += (Date.now() - this.insideStartTime) / 1000;
+              this.insideStartTime = null;
             }
+
+            const m = Math.floor(this.totalStaySeconds / 60);
+            const s = Math.floor(this.totalStaySeconds % 60);
+
+            alert(`🎉 全部景點完成！\n總停留時間：${m} 分 ${s} 秒`);
           }
         }
-      },
-
-      mounted(){
-        // wait for google maps to be ready
-        const t = setInterval(()=>{
-          if (window.google && google.maps) {
-            clearInterval(t);
-            this.initMap();
-          }
-        }, 200);
       }
-    });
-  })();
-  </script>
+    }
+  },
+
+  mounted() {
+    const boot = () => this.initMap();
+    if (window.google && google.maps) boot();
+    else {
+      const t = setInterval(() => {
+        if (window.google && google.maps) { clearInterval(t); boot(); }
+      }, 200);
+    }
+  }
+});
+</script>
 </body>
 </html>
