--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
   </style>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9yd5GeV-J0SHVtpkeHvtFfSryaavAKIE"></script>
 </head>
 <body>
   <div id="timerBox">已花費時間：<span id="timer">00:00:00</span></div>
